# worldgen

./: CMakeLists.txt  build.sh
dependencies/: glad.c  glad.h  shader.h
dependencies/freetype-2.14.1/builds/unix/: config.status  freetype-config  freetype2.pc  ftoption.h  libtool  unix-cc.mk  unix-def.mk
dependencies/freetype-2.14.1/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  (+5 more)
dependencies/freetype-2.14.1/objs/.libs/: libfreetype.lai  libfreetype.so.6.20.4
shaders/: axisShader.fss  shader_1.fss  shader_1.vss
src/: biome.h  camera.h  chunk.h  main.cpp  object.h  text.h  texture.h  todo.md  worldgen.h
test_scrips/: test  test_worldgen.cpp
